project09/src/main/java/com/example/project09/error/ErrorResponse.java
package com.example.project09.error;

import lombok.AllArgsConstructor;
import lombok.Getter;
import lombok.ToString;

@Getter
@ToString
@AllArgsConstructor
public class ErrorResponse {
    private final int status;
    private final String message;
}
